# blog

./: .gitignore  .gitmodules  CNAME  README.md  article.css  articles.html  hugo.toml  index.html  pyproject.toml  styles.css  topics.html
.github/workflows/: build-articles.yml
articles/example/: meta.toml  segcache.html  segcache.md
content/: _index.md  about.md
content/blog/: _index.md  call-for-contributors.md
content/blog/segcache/: index.md
content/people/: _index.md
content/posts/segcache/: index.md
content/research/: _index.md
content/seminar/: 2026-02-04-tianyu-li.md  2026-02-13-aditya-akella.md  2026-02-25-yigong-hu.md  2026-03-04-robert-shaw.md  2026-03-11-jason-jabbour.md  2026-03-18-jason-jabbour.md  2026-03-25-malte-schwarzkopf.md  2026-04-04-robert-shaw.md  2026-04-15-cameron-wong.md  2026-04-22-binxu-wang.md  _index.md
content/teaching/: _index.md
data/: people.yaml
docs/: new-post.md  post-checklist.md
layouts/: index.html
layouts/partials/: footer.html  header.html  statcounter.html
layouts/people/: list.html
scripts/: build_index.py  convert_md.py
